# pluto-obfuscator

./: README.md
hello_non_obfuscation/: CMakeLists.txt
hello_obfuscated/: CMakeLists.txt  hello.c
